--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello world!</h1>
+    <div class="wrapper">
+      <h1>Hello world!</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius iste,
+        nisi dolor natus quos nulla impedit quam libero accusamus architecto!
+        Praesentium accusantium error odit natus provident? Beatae odit
+        praesentium delectus!
+      </p>
+    </div>
   </body>
 </html>
